@@ -1,7 +1,7 @@
--Ben Israel: sync from empty server database
--sorting patch (Emilian)
 -Jan Egil Hagen: reply to mail, fix bug involving ' in upgrade to 2.x
 
+-after sync changes database on server, display new database name on server
+ header.
 
 -set default grade
 -handle orientation changes
