@@ -1,0 +1,77 @@
+--- Mnemosyne Data Base --- Format Version 3 ---
+(lp1
+(imnemosyne.core.mnemosyne_core
+StartTime
+p2
+(dp3
+S'date'
+p4
+cdatetime
+date
+p5
+(S'\x07\xde\x08\x04'
+tRp6
+sS'time'
+p7
+F1407114000
+sba(lp8
+(imnemosyne.core.mnemosyne_core
+Category
+p9
+(dp10
+S'active'
+p11
+I01
+sS'name'
+p12
+V<default>
+p13
+sbaa(lp14
+(imnemosyne.core.mnemosyne_core
+Item
+p15
+(dp16
+S'a'
+Vanswer
+p17
+sS'last_rep'
+p18
+I0
+sS'ret_reps'
+p19
+I0
+sS'cat'
+p20
+g9
+sS'q'
+V<sound src="aida'.mp3"> sound
+p21
+sS'grade'
+p22
+I0
+sS'acq_reps'
+p23
+I3
+sS'ret_reps_since_lapse'
+p24
+I0
+sS'unseen'
+p25
+I00
+sS'easiness'
+p26
+F2.5
+sS'lapses'
+p27
+I0
+sS'acq_reps_since_lapse'
+p28
+I3
+sS'next_rep'
+p29
+I0
+sS'id'
+p30
+S'363e781c'
+p31
+sbaa.
